Refactor authentication and user profile management
- Refactored `AuthController` to improve user registration and authentication, introducing `AuthService` for password hashing and JWT generation.
- Added new endpoints for user and admin registration, password reset, and profile management.
- Updated `ApplicationDbContext` to include `UserProfiles` DbSet and modified database schema with migrations.
- Enhanced `User` model with properties for password reset functionality.
- Created new DTO classes for structured data transfer in user-related operations.
- Added `UsersController` for managing user profiles.
- Registered `AuthService` in `Program.cs` for dependency injection.
- Updated JWT key in `appsettings.json` for improved security.

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,11 +3,11 @@
     "DefaultConnection": "Data Source=Database/nexusboard.db"
   },
   "Jwt": {
-    "Key": "supersecret1234",
+    "Key": "nexusboardSuperSecretKey2025_ExtraSafeKey!",
     "Issuer": "NexusBoard",
     "Audience": "NexusBoardAudience",
     "ExpireMinutes": 60
-  }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
