Add nexusboard.db to project output directory
Updated `NexusBoardAPI.csproj` to include a new `<ItemGroup>` for `nexusboard.db` in the `Database` folder, ensuring it is always copied to the output directory during the build process.

--- a/NexusBoardAPI.csproj
+++ b/NexusBoardAPI.csproj
@@ -21,4 +21,10 @@
     <Folder Include="Database\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Database\nexusboard.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
